alignment fix with style

--- a/css/main.css
+++ b/css/main.css
@@ -1739,7 +1739,7 @@ ul.social_icons li  a i{
 .pricing-area .heading-five, 
 .pricing-area .heading-six, 
 .pricing-area .heading-seven {
-  margin-left: -10px
+  /* margin-left: -10px */
 }
 
 
